# request_handlers/tickets/detail.go
@@ -8,6 +8,14 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// Detail ... Ticket detail
+// @Summary Ticket detail
+// @Description Ticket detail
+// @Tags Tickets
+// @param id path string true "Ticket ID"
+// @Success 200 {object} tickets.TicketDetailStruct
+// @Failure 404,400,500 {object} responses.MyError
+// @Router /tickets/{id} [get]
 func Detail(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
